# apegrunt

./: CMakeLists.txt  LICENSE  git_commit_info.cmake
cmake/: Apegrunt_options.cmake  apegrunt_options.cmake
include/accumulators/: accumulators_utility.hpp  distribution.hpp  distribution_bin.hpp  distribution_bincount.hpp  distribution_count.hpp  distribution_cumulative.hpp  distribution_extractor.hpp  distribution_generator_base.hpp  distribution_generator_csv.hpp  distribution_mean.hpp  distribution_normalized.hpp  distribution_ordered.hpp  distribution_std.hpp  distribution_variance.hpp  std.hpp
include/apegrunt/: Alignment_StateVector_weights.hpp  Alignment_factory.hpp  Alignment_filter.hpp  Alignment_forward.h  Alignment_generator_forward.h  Alignment_generators.hpp  Alignment_impl_base.hpp  Alignment_impl_block_compressed_storage.hpp  Alignment_interface.hpp  Alignment_iterator_impl_base.hpp  Alignment_iterator_impl_block_compressed_storage.hpp  Alignment_iterator_interface.hpp  Alignment_parser_FASTA_grammar.hpp  Alignment_parser_forward.h  Alignment_parsers.hpp  Alignment_utility.hpp  Apegrunt.h  Apegrunt_IO_misc.hpp  Apegrunt_functional.h  Apegrunt_options.h  Apegrunt_utility.hpp  Apegrunt_version.h  Distance.hpp  IndexVector.h  IndexVector_forward.h  IndexVector_interface.hpp  IntegerSequence.h  IntegerSequence_Hybrid_bitset_range.h  IntegerSequence_Hybrid_bitset_range.hpp  IntegerSequence_Hybrid_bitset_range_forward.h  IntegerSequence_Hybrid_bitset_range_iterator.hpp  IntegerSequence_Hybrid_bitset_range_operations.hpp  IntegerSequence_Hybrid_bitset_range_operations_forward.h  IntegerSequence_forward.h  IntegerSequence_interface.hpp  IntegerSequence_iterator.hpp  IntegerSequence_operations.hpp  IntegerSequence_operations_forward.h  Loci.h  Loci_forward.h  (+23 more)
include/graph/: Graph.hpp  Graph_forward.h  Graph_output_format.hpp  Graph_utility.hpp
include/misc/: Array_view.h  Array_view.hpp  Array_view_forward.h  Array_view_iterator.hpp  Array_view_iterator_forward.h  Array_view_operations.hpp  Coincidence_matrix.hpp  CouplingStorage.hpp  Coupling_matrix_view.hpp  Crosstable.hpp  Gauges.hpp  Math.hpp  Matrix_kernel_access_order.hpp  Matrix_math.hpp  SIMD_intrinsics.h  Stopwatch.hpp  TernarySearchTree.hpp  Vector.h  Vector_forward.h  Vector_interface.hpp  Vector_operations.hpp  type_traits.hpp
src/: Apegrunt.cpp  Apegrunt_options.cpp  CMakeLists.txt  StateVector_impl_block_compressed_alignment_storage_avx2.cpp  StateVector_impl_block_compressed_alignment_storage_sse2.cpp  StateVector_state_types.cpp  Stopwatch.cpp  aligned_allocator.cpp
